[package]
name = "strops"
version = "0.1.4-test-2"
authors = ["Rishit Khandelwal rishitkh@gmail.com"]
edition = "2018"
description = "A String operations package for Rust similar to C"
license = "MIT"
repository = "https://github.com/rishit-khandelwal/strops"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
